refactor: use List.of for GeoDbSort fields
Prefer the Java 9+ immutable list factory over Arrays.asList wrapping.